src/test/ui/error-codes/E0244.stderr
error[E0244]: wrong number of type arguments: expected 0, found 2
  --> $DIR/E0244.rs:12:23
   |
LL | struct Bar<S, T> { x: Foo<S, T> }
   |                       ^^^^^^^^^ expected no type arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0244`.
